tests/NormalTests/paczka2/big_fuzzy/42880286.err
Error in line 1: S455 S156 26,6
Error in line 27: HD4aKgY A494 261,4
Error in line 34: HD4aKgÃ A494 40,2
Error in line 21: zfBgnQ S156 67,5
Error in line 23: VSvgWBDu S505 36,1
Error in line 35: zfBgnQ S505 97,4
Error in line 28: 0kj9 S156 16,1
Error in line 37: zfBgnQ S156 63,8
Error in line 39: 0kj9 A494 8,2
Error in line 32: HD4aKgY A494 9,2
Error in line 45: HD4aKgY S455 97,4
Error in line 41: onwXUM7 S455 16,5
Error in line 44: krzPSc4d A494 89,6
Error in line 52: 0kj9 S156 70,0
Error in line 86: HD4aKgY A494 68,1
Error in line 89: HD4aKgY S455 87,5
Error in line 85: krzPSc4d S156 41,9
Error in line 97: 0kj9 S455 351,1
Error in line 110: HD4aKgY S505 4,4
Error in line 117: krzPSc4d S505 86,1
Error in line 126: zfBgnQ S505 9,2
Error in line 128: krzPSc4d A494 49,7
Error in line 113: HD4aKgY A494 44,5
Error in line 132: HD4aKgY S156 86,2
Error in line 133: HD4aKgY S505 15,9
Error in line 144: HD4aKgY A494 13,6
Error in line 148: VSvgWBDu S505 35,5
Error in line 154: onwXUM7 S505 35,3
Error in line 137: 0kj9 S505 61,2
Error in line 153: S455 S455 21,8
Error in line 162: zfBgnQ S505 73,2
Error in line 165: S455 A494 62,7
Error in line 168: zfBgnQ S455 74,1
Error in line 169: krzPSc4d S156 49,1
Error in line 170: S455 S156 69,5
Error in line 187: VSvgWBDu S4jj 4j,6
Error in line 185: HD4aKgY S455 42,6
Error in line 195: krzPSc4d S455 82,6
Error in line 191: zfBgnQ S156 51,2
Error in line 198: krzPSc4d S505 84,0
Error in line 208: krzPSc4d S156 86,4
Error in line 199: zfBgnQ S505 4,0
Error in line 186: VSvgWBDu S455 13,0
Error in line 220: krzPSc4d A494 67,9
Error in line 218: VSvgWBDu S505 88,1
Error in line 232: VSvgWBDu A494 22,1
Error in line 241: HD4aKgY S455 70,62
Error in line 222: S455 S505 31,5
Error in line 239: HD4aKgY S455 47,4
Error in line 243: HD4aKgY A494 69,2
Error in line 244: HD4aKgY S156 0,9
Error in line 240: onwXUM7 A494 85,3
Error in line 250: onwXUM7 S455 -3,4
